Update routes to house product browse at /browse with optional routes for /browse/:super_cat/:category/:sub_category

--- a/app/views/categories/_category_nav.html.erb
+++ b/app/views/categories/_category_nav.html.erb
@@ -1,8 +1,6 @@
 <li><%=
   link_to(
     category.name,
-    centre_products_path(
-      :category => category.code, :super_cat => super_cat.code
-    )
+    centre_browse_category_path(@centre, super_cat.code, category.code),
   )
 %></li>
