--- a/app/views/products/facets/_summary.html.erb
+++ b/app/views/products/facets/_summary.html.erb
@@ -13,5 +13,5 @@
   </div>
 </div>
 <div class="reset_all_facets">
-   <%= link_to "Clear all", centre_products_path(centre_id: params[:centre_id]) %>
+   <%= link_to "Clear all", centre_browse_path(centre_id: params[:centre_id]) %>
 </div>
