--- a/app/views/stores/show.html.erb
+++ b/app/views/stores/show.html.erb
@@ -134,7 +134,7 @@
                         </li>
                       <% end %>
                     </ul>
-                    <%= link_to centre_products_path(retailer: [params[:retailer_code]]), class: 'storefront__featured__view-more' do %>
+                    <%= link_to centre_browse_path(retailer: [params[:retailer_code]]), class: 'storefront__featured__view-more' do %>
                       View more
                       <span class="icon icon--arrow-right icon--lrg" aria-hidden="true"></span>
                     <% end %>
