--- a/app/views/categories/_super_cat_nav.html.erb
+++ b/app/views/categories/_super_cat_nav.html.erb
@@ -6,7 +6,7 @@
     end
     link_to(
       category.name,
-      centre_products_path(:super_cat => category.code),
+      centre_browse_super_cat_path(@centre, category.code),
       attrs
     )
   %>
