--- a/app/views/products/facets/_filtered_list.html.erb
+++ b/app/views/products/facets/_filtered_list.html.erb
@@ -12,8 +12,8 @@
           <%- else -%>
             <%- params.merge facet.url_key_name => (selected + [value.code]).sort -%>
           <%- end.delete_if {|k,v| v.blank? }.merge(last: facet.url_key_name) -%>
-          <%= content_tag :li, value.name, class: "facet-value#{value.selected ? ' facet-value--selected' : ''}", 
-              'data-facet-value' => value.code, 'data-facet-link' => centre_products_path(url_params) %>
+          <%= content_tag :li, value.name, class: "facet-value#{value.selected ? ' facet-value--selected' : ''}",
+              'data-facet-value' => value.code, 'data-facet-link' => centre_browse_path(url_params) %>
         <%- end -%>
       </ul>
     </div>
