--- a/app/views/stores/show.html.erb
+++ b/app/views/stores/show.html.erb
@@ -5,26 +5,19 @@
   <%# Contain 'back to listing link' and 'store details' %>
   <div class="js-pjax-container-stores" aria-live="polite" aria-atomic="true">
 
-    <%# PJAX preloader %>
-    <span class="preloader preloader--middle preloader--light">
-      <span class="preloader__spinner"></span>
-      <em class="hide-visually">Loading, please wait&#8230;</em>
-    </span>
-    <%# //PJAX preloader %>
-
     <div class="stores-maps__inner stores-maps__inner--detail <%= 'is-featured-items' if !@products.empty? %>" id="stores-maps-toggle-listing-detail">
 
       <%# Back to listing link %>
       <div class="stores-maps__filters-toggle">
         <div class="container">
           <%# Small view %>
-          <a href="<%= centre_stores_path(@centre) %>" class="stores-maps__toggle stores-maps__toggle--link btn btn--main btn--main-alt4 btn--main-compact-icon js-pjax-link-stores">
+          <a href="<%= centre_stores_path(@centre) %>" class="stores-maps__toggle stores-maps__toggle--link btn btn--main btn--main-alt4 btn--main-compact-icon">
             <span class="hide-visually">View list</span>
             <span class="icon icon--list icon--lrg" aria-hidden="true"></span>
           </a>
           <%# //Small view %>
           <%# Large view %>
-          <a href="<%= centre_stores_path(@centre) %>" class="stores-maps__filters-toggle__hdr txt-truncate js-pjax-link-stores"><span><span class="icon icon--arrow-left-big" aria-hidden="true"></span> Stores A-Z</span> / <%= @store.name %></a>
+          <a href="<%= centre_stores_path(@centre) %>" class="stores-maps__filters-toggle__hdr txt-truncate"><span><span class="icon icon--arrow-left-big" aria-hidden="true"></span> Stores A-Z</span> / <%= @store.name %></a>
           <%# //Large view %>
         </div>
       </div>
