--- a/app/views/centre_hours/show.html.erb
+++ b/app/views/centre_hours/show.html.erb
@@ -43,7 +43,7 @@
             <div class="grid__item non-palm-one-half lap-sml-one-whole">
 
               <%# Centre hours box %>
-              <div class="islet island--non-palm box">
+              <div class="islet island-non-palm box">
 
                 <%# Centre hours table %>
                 <table cellspacing="0" class="table-striped table-fixed">
@@ -100,7 +100,7 @@
             <% if @stores_with_hours.present? %>
               <div id="shopping-hours" class="grid__item non-palm-one-half lap-sml-one-whole">
                 <%# Store hours box %>
-                <div class="islet island--non-palm box box--position">
+                <div class="islet island-non-palm box box--position">
 
                   <%# Store filter %>
                   <form action="<%= current_url %>#shopping-hours", method="get", class="js-store-trading-hours mrg-base", id="store-<%= week_number %>">
