--- a/app/views/centre_info/_parking_rates.html.erb
+++ b/app/views/centre_info/_parking_rates.html.erb
@@ -1,7 +1,7 @@
 <div class="spacing spacing--dbl">
   <div class="grid grid--gutter-dbl">
     <div class="grid__item non-palm-one-half">
-      <div class="box box--mrg-half islet island--non-palm">
+      <div class="box box--mrg-half islet island-non-palm">
         <table cellspacing="0" class="table-striped" id="parking-rates">
           <caption class="hide-visually">Parking rates</caption>
           <thead>
