--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -9,7 +9,7 @@
       <%# //Movie title %>
 
       <%# Movie classification %>
-      <div class="detail-view__meta islet islet--top-btm detail-view__divider detail-view__divider--top-btm">
+      <div class="detail-view__meta detail-view__divider detail-view__divider--top-btm islet-ends">
         <em><%= @movie.classification %> rating</em>
       </div>
       <%# //Movie classification %>
