--- a/app/views/pages/privacy_policy.html.erb
+++ b/app/views/pages/privacy_policy.html.erb
@@ -2,7 +2,7 @@
 
   <h1 class="detail-view__hdr hn">Westfield Privacy Policies</h1>
 
-  <div class="islet islet--top detail-view__divider detail-view__divider--top detail-view__desc txt-formatted">
+  <div class="detail-view__divider detail-view__divider--top txt-formatted islet-top">
 
     <h2>Westfield General Privacy Policy</h2>
 
