--- a/app/views/pages/terms_conditions.html.erb
+++ b/app/views/pages/terms_conditions.html.erb
@@ -2,7 +2,7 @@
 
   <h1 class="detail-view__hdr hn">Terms &amp; Conditions of Use</h1>
 
-  <div class="islet islet--top detail-view__divider detail-view__divider--top detail-view__desc txt-formatted">
+  <div class="detail-view__divider detail-view__divider--top txt-formatted islet-top">
     <h2>General Terms &amp; Conditions of Use</h2>
 
     <p>Current as at <time datetime="2013-10-01">1 October 2013</time></p>
@@ -97,7 +97,7 @@
     <ul>
       <li>Keep your account passwords private. Remember, anybody who knows your password may access your account.</li>
       <li>When creating a password, use at least 6 characters. A combination of letters and numbers is best. Do not use dictionary words, your name, email address, or other personal data that can be easily obtained. Westfield also recommends that you frequently change your password. You can do this by going to 'My Account' and clicking 'Change password',</li>
-      <li>Avoid using the same password for multiple online accounts.</li>    
+      <li>Avoid using the same password for multiple online accounts.</li>
     </ul>
 
     <p>Westfield will never ask you to confirm any account or credit card details via email. If you receive an email claiming to be from westfield.com asking you to do so, please ignore it and do not respond.</p>
