--- a/app/views/shared/_footer_promo_tiles.html.erb
+++ b/app/views/shared/_footer_promo_tiles.html.erb
@@ -5,7 +5,7 @@
       <div class="promo-tile box">
         <%= image_tag promo[:image_src], alt: '', width: 589, crop: 'limit', fetch_format: 'auto' %>
         <span class="promo-tile__icon icon <%= promo[:icon] %> icon--flush-top" aria-hidden="true"></span>
-        <div class="islet island--non-palm">
+        <div class="islet island-non-palm">
           <h2 class="promo-tile__hdr"><%= promo[:heading] %></h2>
           <p><%= promo[:desc] %></p>
           <%= link_to promo[:link_text], promo[:link_url] %>
