Adding ARIA live attrs back to Stores index container

--- a/app/views/stores/index.html.erb
+++ b/app/views/stores/index.html.erb
@@ -4,7 +4,7 @@
 
   <%# Contain 'filters', 'map/list toggle', and 'listings' %>
   <%# [BACKEND] append `is-filter-applied` class to this container when a category filter has been applied %>
-  <div class="js-pjax-container-stores">
+  <div class="js-pjax-container-stores" aria-live="polite" aria-atomic="true">
 
     <h1 class="hide-visually">Stores</h1>
 
