WSF-5012 fix broken page

--- a/app/views/notices/show.html.erb
+++ b/app/views/notices/show.html.erb
@@ -12,7 +12,7 @@
   <%# Notice image %>
   <div class="detail-view__media detail-view__mrg-base">
     <%= cl_image_tag @notice.image_ref,
-        alt: notice.img_alt_text ? notice.img_alt_text : "",
+        alt: @notice.img_alt_text ? @notice.img_alt_text : "",
         width: 638,
         crop: :limit,
         format: :jpg,
