--- a/app/views/centre_info/_notices.html.erb
+++ b/app/views/centre_info/_notices.html.erb
@@ -1,7 +1,7 @@
 <%# Notices %>
 <h2 id="notice">Notices</h2>
 
-<div class="spacing spacing--dbl">
+<div class="mrg-dbl-alt">
   <div class="grid grid--gutter-dbl">
     <div class="grid__item non-palm-one-whole">
       <ul class="txt-formatted__list-unstyled">
