--- a/app/views/styleguides/helpers.html.erb
+++ b/app/views/styleguides/helpers.html.erb
@@ -7,7 +7,7 @@ title: Helpers
 
 <!-- Spacing -->
 <div class="sg-h2">Spacing</div>
-<div class="sg-note">To apply spacing via the base bottom margin or variants of it e.g. half / double apply any of the: <code class="sg-code">class="mrg-base"</code>, <code class="sg-code">class="mrg-half"</code>, or <code class="sg-code">class="mrg-dbl"</code> helper classes to the element, can also apply 'top' margins by adding 'top' to the end of the aformentioned classes e.g. <code class="sg-code">class="mrg-dbl--top"</code>, or to remove spacing applied via margins apply any of the <code class="sg-code">class="flush--"</code> helper classes.</div>
+<div class="sg-note">To apply spacing via the base bottom margin or variants of it e.g. half / double apply any of the: <code class="sg-code">class="mrg-base"</code>, <code class="sg-code">class="mrg-half"</code>, or <code class="sg-code">class="mrg-dbl"</code> helper classes to the element, can also apply 'top' margins by adding 'top' to the end of the aformentioned classes e.g. <code class="sg-code">class="mrg-dbl-top"</code>, or to remove spacing applied via margins apply any of the <code class="sg-code">class="flush--"</code> helper classes.</div>
 
 <div class="sg-h3">Apply Spacing</div>
 <div class="sg-h4">Bottom</div>
@@ -15,18 +15,18 @@ title: Helpers
 <p class="mrg-half">I'm applying half of the base bottom margin.</p>
 <p class="mrg-dbl">I'm applying double the base bottom margin.</p>
 <div class="sg-h4">Top</div>
-<p class="mrg-base--top flush--btm">I'm applying the base top margin.</p>
-<p class="mrg-half--top flush--btm">I'm applying half of the base top margin.</p>
-<p class="mrg-dbl--top flush--btm">I'm applying double the base top margin.</p>
+<p class="mrg-base-top flush-btm">I'm applying the base top margin.</p>
+<p class="mrg-half-top flush-btm">I'm applying half of the base top margin.</p>
+<p class="mrg-dbl-top flush-btm">I'm applying double the base top margin.</p>
 
 <div class="sg-h3">Remove Spacing (Flush)</div>
 <p class="flush">I have no spacing (margin).</p>
-<p class="flush--top">I have no top spacing (margin).</p>
-<p class="flush--right">I have no right spacing (margin).</p>
-<p class="flush--btm">I have no bottom spacing (margin).</p>
-<p class="flush--left">I have no left spacing (margin).</p>
-<p class="flush--ends">I have no end (top/bottom) spacing (margin).</p>
-<p class="flush--sides">I have no side (left/right) spacing (margin).</p>
+<p class="flush-top">I have no top spacing (margin).</p>
+<p class="flush-right">I have no right spacing (margin).</p>
+<p class="flush-btm">I have no bottom spacing (margin).</p>
+<p class="flush-left">I have no left spacing (margin).</p>
+<p class="flush-ends">I have no end (top/bottom) spacing (margin).</p>
+<p class="flush-sides">I have no side (left/right) spacing (margin).</p>
 <!-- //Spacing -->
 
 <!-- Float -->
