--- a/app/views/styleguides/modules(icon).html.erb
+++ b/app/views/styleguides/modules(icon).html.erb
@@ -14,22 +14,22 @@ title: Modules - Icon
 
 <!-- Apply spacing -->
 <div class="sg-h3">Apply spacing</div>
-<p class="flush--btm"><span class="icon icon--biro icon--spacing" aria-hidden="true"></span> Lorem ipsum</p>
-<p class="flush--btm"><span class="icon icon--fountain-pen icon--spacing" aria-hidden="true"></span> Lorem ipsum</p>
-<p class="flush--btm"><span class="icon icon--speaker icon--spacing" aria-hidden="true"></span> Lorem ipsum</p>
-<p class="flush--btm"><span class="icon icon--stacks icon--spacing" aria-hidden="true"></span> Lorem ipsum</p>
-<p class="flush--btm"><span class="icon icon--pencil icon--spacing" aria-hidden="true"></span> Lorem ipsum</p>
-<p class="flush--btm"><span class="icon icon--ui icon--spacing" aria-hidden="true"></span> Lorem ipsum</p>
+<p class="flush-btm"><span class="icon icon--biro icon--spacing" aria-hidden="true"></span> Lorem ipsum</p>
+<p class="flush-btm"><span class="icon icon--fountain-pen icon--spacing" aria-hidden="true"></span> Lorem ipsum</p>
+<p class="flush-btm"><span class="icon icon--speaker icon--spacing" aria-hidden="true"></span> Lorem ipsum</p>
+<p class="flush-btm"><span class="icon icon--stacks icon--spacing" aria-hidden="true"></span> Lorem ipsum</p>
+<p class="flush-btm"><span class="icon icon--pencil icon--spacing" aria-hidden="true"></span> Lorem ipsum</p>
+<p class="flush-btm"><span class="icon icon--ui icon--spacing" aria-hidden="true"></span> Lorem ipsum</p>
 <!-- //Apply spacing -->
 
 <!-- Fixed width -->
 <div class="sg-h3">Fixed width</div>
-<p class="flush--btm"><span class="icon icon--biro icon--fixed-width icon--lrg icon--spacing" aria-hidden="true"></span> Lorem ipsum</p>
-<p class="flush--btm"><span class="icon icon--fountain-pen icon--fixed-width icon--lrg icon--spacing" aria-hidden="true"></span> Lorem ipsum</p>
-<p class="flush--btm"><span class="icon icon--speaker icon--fixed-width icon--lrg icon--spacing" aria-hidden="true"></span> Lorem ipsum</p>
-<p class="flush--btm"><span class="icon icon--stacks icon--fixed-width icon--lrg icon--spacing" aria-hidden="true"></span> Lorem ipsum</p>
-<p class="flush--btm"><span class="icon icon--pencil icon--fixed-width icon--lrg icon--spacing" aria-hidden="true"></span> Lorem ipsum</p>
-<p class="flush--btm"><span class="icon icon--ui icon--fixed-width icon--lrg icon--spacing" aria-hidden="true"></span> Lorem ipsum</p>
+<p class="flush-btm"><span class="icon icon--biro icon--fixed-width icon--lrg icon--spacing" aria-hidden="true"></span> Lorem ipsum</p>
+<p class="flush-btm"><span class="icon icon--fountain-pen icon--fixed-width icon--lrg icon--spacing" aria-hidden="true"></span> Lorem ipsum</p>
+<p class="flush-btm"><span class="icon icon--speaker icon--fixed-width icon--lrg icon--spacing" aria-hidden="true"></span> Lorem ipsum</p>
+<p class="flush-btm"><span class="icon icon--stacks icon--fixed-width icon--lrg icon--spacing" aria-hidden="true"></span> Lorem ipsum</p>
+<p class="flush-btm"><span class="icon icon--pencil icon--fixed-width icon--lrg icon--spacing" aria-hidden="true"></span> Lorem ipsum</p>
+<p class="flush-btm"><span class="icon icon--ui icon--fixed-width icon--lrg icon--spacing" aria-hidden="true"></span> Lorem ipsum</p>
 <!-- //Fixed width -->
 
 <!-- Alternate sizes -->
