--- a/app/views/centre_info/_contact_us.html.erb
+++ b/app/views/centre_info/_contact_us.html.erb
@@ -1,7 +1,7 @@
 <%# Contact Us %>
 <% if @centre.phone_number.present? or @centre.email_address.present? %>
   <h2 id="contact-us">Contact Us</h2>
-  <div class="spacing spacing--dbl">
+  <div class="mrg-dbl-alt">
     <div class="grid grid--gutter-dbl">
 
       <%# Phone number %>
@@ -20,7 +20,7 @@
             <%= phone_link @centre.phone_number, class: 'btn btn--full btn--main btn--main-alt2 btn--main-lrg' do |phone_number| %>
               <span class="icon icon--phone icon--xlrg icon--spacing-lrg icon--flush-top" aria-hidden="true"></span>
               <strong>Call <%= @centre.short_name %> Centre</strong>
-            <% end %> 
+            <% end %>
           </span>
           <%# //Show CTA button for centre contact number for palm %>
         </div>
