--- a/app/views/centre_info/_parking_rates.html.erb
+++ b/app/views/centre_info/_parking_rates.html.erb
@@ -1,4 +1,4 @@
-<div class="spacing spacing--dbl">
+<div class="mrg-dbl-alt">
   <div class="grid grid--gutter-dbl">
     <div class="grid__item non-palm-one-half">
       <div class="box box--mrg-half islet island-non-palm">
