WSF-5935: Add mrg-base-alt to getting here section in centre info and removing spacing file

--- a/app/views/styleguides/helpers.html.erb
+++ b/app/views/styleguides/helpers.html.erb
@@ -7,7 +7,7 @@ title: Helpers
 
 <!-- Spacing -->
 <div class="sg-h2">Spacing</div>
-<div class="sg-note">To apply spacing via the base bottom margin or variants of it e.g. half / double apply any of the: <code class="sg-code">class="mrg-base"</code>, <code class="sg-code">class="mrg-half"</code>, or <code class="sg-code">class="mrg-dbl"</code> helper classes to the element, can also apply 'top' margins by adding 'top' to the end of the aformentioned classes e.g. <code class="sg-code">class="mrg-dbl-top"</code>, or to remove spacing applied via margins apply any of the <code class="sg-code">class="flush--"</code> helper classes.</div>
+<div class="sg-note">To apply spacing via the base bottom margin or variants of it e.g. half / double apply any of the: <code class="sg-code">class="mrg-base"</code>, <code class="sg-code">class="mrg-half"</code>, or <code class="sg-code">class="mrg-dbl"</code> helper classes to the element, can also apply 'top' margins by adding 'top' to the end of the aformentioned classes e.g. <code class="sg-code">class="mrg-dbl-top"</code>, or to remove spacing applied via margins apply any of the <code class="sg-code">class="flush-"</code> helper classes.</div>
 
 <div class="sg-h3">Apply Spacing</div>
 <div class="sg-h4">Bottom</div>
