Hardware accelerate the JIRA feedback button as it uses position: fixed

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -65,6 +65,7 @@ Global stylesheet
   @import "partials/utils/placeholders/box-shadows";
   @import "partials/utils/placeholders/hide";
   @import "partials/utils/placeholders/new-block-formatting-context";
+  @import "partials/utils/placeholders/hardware-accelerated-css";
 
 /* Base */
 @import "partials/base/fonts";
